# git-gud-chess

./: .gitattributes  .gitignore  .vercelignore  DEPLOY.md  README.md  demo.npz  pyproject.toml  requirements.txt  stockfishpy.py
api/: index.py
chessbot/: __init__.py  __main__.py  config.py  engine.py
chessbot/core/: types.py
chessbot/evaluation/: __init__.py  base.py  classical.py  tables.py
chessbot/evaluation/neural/: __init__.py  evaluator.py  features.py  network.py  quantized.py
chessbot/evaluation/terms/: __init__.py  king_safety.py  material.py  mobility.py  pawn_structure.py  pieces.py
chessbot/native/: __init__.py  __main__.py  bridge.py
chessbot/search/: __init__.py  limits.py  ordering.py  searcher.py  transposition.py
chessbot/uci/: __init__.py  protocol.py
pipeline/: README.md  aunn_model.py  build_main_clang.sh  generate_data.py  setup_engine.sh  train.py  train_python.py  win_compat.h
reference/: README.md
tests/: conftest.py  helpers.py  test_evaluation.py  test_native.py  test_neural.py  test_perft.py  test_reference_fidelity.py  test_search.py  test_uci.py  test_web_state.py
training/: train.py
web/: __main__.py  app.py  config.py
web/api/: routes.py  schemas.py
web/services/: engine.py  game.py
web/static/: app.js  index.html  style.css
web/static/js/: api.js  board.js  chess.js  drawing.js  game.js  gameover.js  input.js  main.js  players.js  promotion.js  sound.js
web/static/pieces/: README.md
web/static/play/: index.html
web/static/sounds/: README.md
