[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chessbot"
version = "0.1.0"
description = "A clean, dependency-light UCI chess engine: hand-crafted evaluation and alpha-beta search, with an optional small trained neural evaluator."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "chessbot" }]
dependencies = [
    "python-chess>=1.11",
    "pydantic>=2.6",
    "numpy>=1.26",
]

# PEP 735 dependency groups. `uv sync` installs the groups listed in
# tool.uv.default-groups below, so a single `uv sync` gives you pytest AND the
# training dep (torch) and web deps -- `uv run pytest`, `uv run python training/train.py`,
# and `uv run python -m web` then work with no extra flags.
[dependency-groups]
dev = ["pytest>=8.0"]
train = ["torch>=2.0"]
web = ["fastapi>=0.110", "uvicorn>=0.29"]

[tool.uv]
default-groups = ["dev", "train", "web"]

[project.scripts]
chessbot = "chessbot.__main__:main"

[tool.setuptools.packages.find]
include = ["chessbot*", "web*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
